compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__patterns__alternative_patterns1.snap
---
source: compiler-core/src/fsharp/tests/patterns.rs
expression: "\npub fn foo() {\n  case Ok(1) {\n    Ok(duplicate_name) | Error(duplicate_name) -> duplicate_name\n  }\n}"
---
module rec my.``mod``

let foo () = begin
    match Ok (1L) with
    | (Ok(duplicate_name)) | (Error(duplicate_name)) ->
        duplicate_name
end
