compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__patterns__alternative_patterns2.snap
---
source: compiler-core/src/fsharp/tests/patterns.rs
expression: "\npub fn foo() {\n    let duplicate_name = 1\n\n    case 1 {\n        1 | 2 if duplicate_name == 1 -> duplicate_name\n        _ -> 0\n    }\n}"
---
module rec my.``mod``
#nowarn "25" // Incomplete pattern matches on this expression.

let foo () = begin
    let duplicate_name = 1L
    match 1L with
    | 1L | 2L when duplicate_name = 1L ->
        duplicate_name
    | _ ->
        0L
end
