compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__patterns__alternative_patterns3.snap
---
source: compiler-core/src/fsharp/tests/patterns.rs
expression: "\npub const constant = Ok(1)\n\npub fn foo(arg) {\n  let _ = constant\n  case arg {\n    _ if arg == constant -> 1\n    _ -> 0\n  }\n}\n"
---
module rec my.``mod``

let constant = Ok(1L)
let foo (arg: Result<int64, 'u11>) = begin
    let _ = constant
    match arg with
    | _ when arg = Ok(1L) ->
        1L
    | _ ->
        0L
end
