compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__patterns__string_prefix_as_pattern_with_assertion.snap
---
source: compiler-core/src/fsharp/tests/patterns.rs
expression: "pub fn a(x) {\n  let assert \"a\" as a <> rest = \"wibble\"\n  a\n}"
---
module rec my.``mod``
let a (x: 'u8) = begin
    let (Gleam_codegen_string_parts "a" (a, rest)) = "wibble"
    a
end
